﻿drkns 24.01.2015 09:09:05 +0200 - build 4255

1. Уточнение 4254.2.

drkns 22.01.2015 23:13:47 +0200 - build 4254

1. Показываем метки дисков из реестра при отсутствии физических.

2. "Починим" загрузку плагинов c нетрадиционным расположением зависимых dll.

3. Не закрываем quick search при потере фокуса, если OC новее, чем XP/2k3.

4. Рефакторинг.

shmuel 22.01.2015 13:21:30 +0200 - build 4253

1. Рефакторинг.

shmuel 21.01.2015 23:58:16 +0200 - build 4252

1. Рефакторинг.

shmuel 21.01.2015 16:51:57 +0200 - build 4251

1. Рефакторинг.

zg 20.01.2015 23:11:38 +0200 - build 4250

1. уточнение 4248 для нередактируемых контролов.

svs 20.01.2015 23:19:32 +0300 - build 4249

1. SQLite 3.8.8.1

zg 20.01.2015 03:18:09 +0200 - build 4248

1. 0002912: В диалогах DM_SETTEXT, DM_GETTEXT не позволяют работать со строками содержащими '\0'.

svs 19.01.2015 23:46:37 +0300 - build 4247

1. SQLite 3.8.8

drkns 19.01.2015 20:24:15 +0200 - build 4246

1. Уточнение отображения прогресса при удалении файлов.

shmuel 18.01.2015 20:58:13 +0200 - build 4245

1. Данные одноимённых контент-колонок от разных плагинов конкатенируются.

shmuel 17.01.2015 23:30:07 +0200 - build 4244

1. Рефакторинг.

drkns 17.01.2015 23:10:50 +0200 - build 4243

1. 0002908: Исключение при попытке отображения описания при некорректном Descript.ion

drkns 17.01.2015 16:00:16 +0200 - build 4242

1. Продолжение 4241.

1. Поддержка компиляции в Intel C++ 14.

drkns 17.01.2015 09:38:11 +0200 - build 4241

1. Race condition при far /?

2. Уточнение 4232.

3. Рефакторинг.

zg 16.01.2015 00:46:37 +0200 - build 4240

1. исправление altf9 в быстром поиске.

svs 14.01.2015 12:54:28 +0300 - build 4239

1. F1 в грабере (Alt-Ins) показывает раздел помощи "MiscCmd".
   Выделение области после гашения окна помощи не прерывается.

shmuel 11.01.2015 20:00:05 +0200 - build 4238

1. Рефакторинг.

drkns 09.01.2015 19:25:37 +0200 - build 4237

1. 0002849: ProcessSynchroEventW вызывается при DMODE_NOPLUGINS.
